# developtools_hdc_standard

./: .clang-format  .gitattributes  Android.bp  BUILD.gn  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  hdc.gni  ohos.build
prebuilt/: NOTICE  README_zh.md
prebuilt/linux/: hdc-std  hdc_std
prebuilt/linux-x86/: hdc_std
scripts/: build_standalone_linux_host.sh
src/common/: async_cmd.cpp  async_cmd.h  auth.cpp  auth.h  base.cpp  base.h  channel.cpp  channel.h  common.h  debug.cpp  debug.h  define.h  define_plus.h  file.cpp  file.h  file_descriptor.cpp  file_descriptor.h  forward.cpp  forward.h  serial_struct.h  serial_struct_define.h  session.cpp  session.h  system_depend.h  task.cpp  task.h  tcp.cpp  tcp.h  transfer.cpp  transfer.h  uart.cpp  uart.h  usb.cpp  usb.h
src/daemon/: daemon.cpp  daemon.h  daemon_app.cpp  daemon_app.h  daemon_common.h  daemon_forward.cpp  daemon_forward.h  daemon_tcp.cpp  daemon_tcp.h  daemon_uart.cpp  daemon_uart.h  daemon_unity.cpp  daemon_unity.h  daemon_usb.cpp  daemon_usb.h  jdwp.cpp  jdwp.h  main.cpp  shell.cpp  shell.h  system_depend.cpp  system_depend.h  usb_ffs.h
src/host/: client.cpp  client.h  host_app.cpp  host_app.h  host_common.h  host_forward.cpp  host_forward.h  host_tcp.cpp  host_tcp.h  host_uart.cpp  host_uart.h  host_unity.cpp  host_unity.h  host_usb.cpp  host_usb.h  main.cpp  server.cpp  server.h  server_for_client.cpp  server_for_client.h  translate.cpp  translate.h
src/test/: hdc_runtime_command.cpp  hdc_runtime_command.h  hdc_runtime_frame.cpp  hdc_runtime_frame.h  main.cpp  ut_command.cpp  ut_command.h  ut_common.h  ut_mod.cpp  ut_mod.h  ut_runtime.cpp  ut_runtime.h
src/test/jdwp/: BUILD.gn  HdcJdwpSimulator.cpp  HdcJdwpSimulator.h  define.h  main.cpp
test/: BUILD.gn
test/unittest/common/: HdcJdwpTest.cpp  daemon_uart_test.cpp  host_uart_test.cpp  uart_test.cpp
test/unittest/common/include/: HdcJdwpTest.h  daemon_uart_test.h  host_uart_test.h  uart_test.h  weak.h
test/unittest/resource/: ohos_test.xml
test/unittest/script/coverage/: gcov.sh  lcov.sh
