# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

#Purpose: For jdwp test
config("hdc_config") {
  cflags_cc = [ "-std=c++17" ]
}

ohos_executable("jdwp_test") {
  sources = [
    "HdcJdwpSimulator.cpp",
    "main.cpp",
  ]

  configs = [ ":hdc_config" ]

  if (is_ohos) {
    defines = [ "SIMULATE_JDWP" ]
  }

  deps = [
    "//third_party/libuv:uv_static",
    "//third_party/lz4:liblz4_static",
    "//third_party/openssl:crypto_source",
    "//utils/native/base:utils",
  ]
  if (use_musl) {
    deps += [
      "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
    ]
  }

  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  include_dirs = [
    "//utils/native/base/include",
    "//third_party/lz4/lib",
    "//third_party/openssl/include",
    "//third_party/libuv",
  ]
  if (use_musl) {
    include_dirs += [
      "//base/startup/syspara_lite/interfaces/innerkits/native/syspara/include",
    ]
  }
  install_enable = true
  subsystem_name = "developtools"
  part_name = "hdc_standard"
}

group("hdc_target_standard_test") {
  deps = [ ":jdwp_test" ]
}
