# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

#Purpose: For jdwp test
ohos_executable("jdwp_test") {
  cflags_cc = [ "-std=c++17" ]
  defines = [ "JS_JDWP_CONNECT" ]
  sources = [
    "HdcJdwpSimulator.cpp",
    "main.cpp",
  ]
  deps = [
    "//third_party/libuv:uv_static",
    "//utils/native/base:utils",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  include_dirs = [
    "//third_party/bounds_checking_function/include",
    "//third_party/libuv",
  ]
  install_enable = true
  subsystem_name = "developtools"
  part_name = "hdc_standard"
}

group("hdc_target_standard_test") {
  deps = [ ":jdwp_test" ]
}
